[gd_scene load_steps=9 format=3 uid="uid://bscg0grwuodaq"]

[ext_resource type="Texture2D" uid="uid://b3gr41u6v5o6o" path="res://资源/1/gun/gun_10.png" id="1_kxp5t"]
[ext_resource type="Script" path="res://场景/玩家/枪/gun.gd" id="2_7xbek"]
[ext_resource type="Texture2D" uid="uid://dbkkoyd1ydt7x" path="res://资源/3/UI.png" id="3_e6g3l"]

[sub_resource type="Animation" id="Animation_c8yo7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, -3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ud8uk"]
resource_name = "reload"
length = 0.6
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 3.14159, 0.0, 9.42478, 12.5664]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.571429),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"reload"
}]
}

[sub_resource type="Animation" id="Animation_p7o73"]
resource_name = "shoot"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(4, -3), Vector2(1, -3), Vector2(4, -3)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"Player_shoot"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nxqpq"]
_data = {
"RESET": SubResource("Animation_c8yo7"),
"reload": SubResource("Animation_ud8uk"),
"shoot": SubResource("Animation_p7o73")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_alogn"]
atlas = ExtResource("3_e6g3l")
region = Rect2(625, 405, 174, 8)

[node name="gun_10" type="Sprite2D"]
texture = ExtResource("1_kxp5t")
offset = Vector2(4, -3)
script = ExtResource("2_7xbek")
path = "res://场景/玩家/子弹/bullet_10.tscn"
bullet_speed = 500
bullet_free_time = 10
bullet_offset = 2.0
pick_up = "res://场景/玩家/枪/gun_10/gun_10_pickup.tscn"
shoot_sfx = "gun_1_shoot"
reload_sfx = "reload_1"
max_bullet_num = 7
self_path = "res://场景/玩家/枪/gun_10/gun_10.tscn"

[node name="shootPos" type="Marker2D" parent="."]
position = Vector2(10, -6)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nxqpq")
}

[node name="bullet_num_bar" type="TextureProgressBar" parent="."]
offset_left = -18.0
offset_top = 6.00001
offset_right = 156.0
offset_bottom = 14.0
rotation = -1.5708
scale = Vector2(0.1, 0.3)
max_value = 1.0
value = 1.0
texture_progress = SubResource("AtlasTexture_alogn")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="gun_texture" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -659.0
offset_top = -1082.0
offset_right = -611.0
offset_bottom = -1034.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(3, 3)
texture = ExtResource("1_kxp5t")

[node name="bullet_num" type="Label" parent="CanvasLayer"]
offset_left = 366.0
offset_top = 28.0
offset_right = 446.0
offset_bottom = 52.0
theme_override_font_sizes/font_size = 24
text = "10/10"

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
